tests/success/optional_get_value_reference.bz
function test()
{
	let oi: ?int32 = 3;
	static_assert(typeof oi.get_value() == &int32);
	mut oi: ?int32 = 3;
	static_assert(typeof oi.get_value() == &mut int32);
}
