tests/error/type_match/typename_non_type_dest.bz
function test1(val: int32);

function test()
{
	test1(float32);
}
